[package]
name = "vpncloud"
version = "1.3.0"
authors = ["Dennis Schwerdel <schwerdel@googlemail.com>"]
build = "build.rs"
license = "GPL-3.0"
description = "Peer-to-peer VPN"
homepage = "https://vpncloud.ddswd.de"
repository = "https://github.com/dswd/vpncloud"
keywords = ["vpn", "p2p", "tun", "tap", "network"]
readme = "README.md"
edition = "2018"

[dependencies]
time = "0.2"
docopt = "^1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
log = { version = "0.4", features = ["std"] }
signal = "0.7"
libc = "0.2"
rand = "0.7"
fnv = "1"
net2 = "0.2"
yaml-rust = "0.4"
igd = { version = "0.10", optional = true }
siphasher = "0.3"
daemonize = "0.4"
ring = "0.16"
privdrop = "0.3"

[build-dependencies]
cc = "^1"
pkg-config = "0.3"

[dev-dependencies]
tempfile = "3"

[features]
default = ["nat"]
bench = []
nat = ["igd"]

[profile.release]
lto = true

[profile.dev]
lto = false

[profile.test]
lto = false

[package.metadata.deb]
extended-description = """\
 VpnCloud is a simple VPN over UDP. It creates a virtual network interface on
 the host and forwards all received data via UDP to the destination. VpnCloud
 establishes a fully-meshed VPN network in a peer-to-peer manner. It can work
 on TUN devices (IP based) and TAP devices (Ethernet based)."""
license-file = ["LICENSE.md", "1"]
changelog = "assets/changelog.txt"
section = "net"
assets = [
  ["target/release/vpncloud", "/usr/bin/vpncloud", "755"],
  ["assets/example.net.disabled", "/etc/vpncloud/example.net.disabled", "600"],
  ["assets/vpncloud@.service", "/lib/systemd/system/vpncloud@.service", "644"],
  ["target/vpncloud.1.gz", "/usr/share/man/man1/vpncloud.1.gz", "644"]
]

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
vpncloud = { path = "/usr/bin/vpncloud" }
