[package]
name = "vpncloud"
version = "2.4.0"
authors = ["Dennis Schwerdel <schwerdel@googlemail.com>"]
license = "GPL-3.0"
description = "Peer-to-peer VPN"
homepage = "https://vpncloud.ddswd.de"
repository = "https://github.com/dswd/vpncloud"
keywords = ["vpn", "p2p", "tun", "tap", "network"]
readme = "README.md"
edition = "2021"

[package.metadata]
toolchain = "1.75.0"
upx_version = "4.2.2"

[dependencies]
chrono = { version = "0.4", features = ["std", "clock"], default_features = false}
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = { version = "0.4", features = ["std"] }
signal = "0.7"
libc = "0.2"
rand = "0.8"
fnv = "1"
yaml-rust = "0.4"
daemonize = "0.5"
ring = "0.17"
privdrop = "0.5"
byteorder = "1.4"
thiserror = "1.0"
smallvec = "1.7"
dialoguer = { version = "0.11", optional = true }
tungstenite = { version = "0.21", optional = true }
url = { version = "2.2", optional = true }
igd = { version = "0.12", optional = true }


[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
iai = "0.1"

[features]
default = ["nat", "websocket", "wizard"]
nat = ["igd"]
websocket = ["tungstenite", "url"]
wizard = ["dialoguer"]
installer = []

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "valgrind"
harness = false

[profile.release]
lto = true
strip = true

[profile.dev]
lto = false

[profile.test]
lto = false

[package.metadata.deb]
extended-description = """\
 VpnCloud is a high performance peer-to-peer mesh VPN over UDP supporting strong encryption, 
 NAT traversal and a simple configuration. It establishes a fully-meshed self-healing VPN
 network in a peer-to-peer manner with strong end-to-end encryption based on elliptic curve
 keys and AES-256. VpnCloud creates a virtual network interface on the host and forwards all
 received data via UDP to the destination. It can work on TUN devices (IP based) and TAP 
 devices (Ethernet based)."""
license-file = ["LICENSE.md", "1"]
changelog = "assets/changelog.txt"
section = "net"
depends = "libc6 (>= 2.23), libgcc1 (>= 1:6.0.1)"
maintainer-scripts = "assets/deb-scripts"
assets = [
  ["target/release/vpncloud", "/usr/bin/vpncloud", "755"],
  ["assets/example.net.disabled", "/etc/vpncloud/example.net.disabled", "600"],
  ["assets/vpncloud@.service", "/lib/systemd/system/vpncloud@.service", "644"],
  ["assets/vpncloud.target", "/lib/systemd/system/vpncloud.target", "644"],
  ["assets/vpncloud-wsproxy.service", "/lib/systemd/system/vpncloud-wsproxy.service", "644"],
  ["target/vpncloud.1.gz", "/usr/share/man/man1/vpncloud.1.gz", "644"]
]

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/vpncloud", dest = "/usr/bin/vpncloud", mode = "755" },
  { source = "assets/example.net.disabled", dest = "/etc/vpncloud/example.net.disabled", mode = "600" },
  { source = "assets/vpncloud@.service", dest = "/lib/systemd/system/vpncloud@.service", mode = "644" },
  { source = "assets/vpncloud.target", dest = "/lib/systemd/system/vpncloud.target", mode = "644" },
  { source = "assets/vpncloud-wsproxy.service", dest = "/lib/systemd/system/vpncloud-wsproxy.service", mode = "644" },
  { source = "target/vpncloud.1.gz", dest = "/usr/share/man/man1/vpncloud.1.gz", mode = "644" }
]
auto-req = "no"